// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components/headers/CollapsibleStickyHeader Customizable 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
          "position": "absolute",
          "width": "100%",
          "zIndex": 10,
        },
        Object {
          "height": 75.86729857819905,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "transform": Array [
              Object {
                "translateY": 75.86729857819905,
              },
            ],
          },
          Object {
            "alignItems": "center",
            "backgroundColor": "#FAFAFA",
            "justifyContent": "center",
          },
        ]
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 32,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="header1-test-id"
      >
        TEST
      </Text>
    </View>
  </View>
</View>
`;

exports[`Storyshots components/headers/CollapsibleStickyHeader Default 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 30.76923076923077,
      },
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "overflow": "hidden",
          "position": "absolute",
          "width": "100%",
          "zIndex": 10,
        },
        Object {
          "height": 75.86729857819905,
        },
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "height": "100%",
            "position": "absolute",
            "width": "100%",
          },
          Object {
            "transform": Array [
              Object {
                "translateY": 75.86729857819905,
              },
            ],
          },
          undefined,
        ]
      }
    >
      <Text
        adjustsFontSizeToFit={false}
        numberOfLines={0}
        style={
          Array [
            Object {
              "color": "#333333",
              "fontFamily": "DIN2014-Demi",
              "fontSize": 24,
              "fontWeight": "600",
              "lineHeight": 32,
              "textAlign": "left",
            },
            undefined,
          ]
        }
        testID="header1-test-id"
      >
        TEST
      </Text>
    </View>
  </View>
</View>
`;
